-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2001-10-13  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
	
	* eca-chainsetup.h (options_to_string): added
	* eca-control.h (print_general_status): removed
	
2001-10-11  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-types.h (AUDIO_IO_DEVICE::is_realtime_object): added
	* eca-engine.h (is_realtime_object): removed
	
2001-10-11  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-chainsetup-bufparams.h (number_of_set): added
	* eca-chainsetup.h (has_nonrealtime_objects): added
	
2001-10-10  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* midiio.h (file_descriptor): renamed to poll_descriptor
	* audioio.h (poll_descriptor): added
	* eca-debug (detach_debug_object): added
	
2001-10-06  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-main.h (all): renamed to eca-engine.h
	* eca-engine.h (ECA_PROCESSOR): renamed to ECA_ENGINE
	* eca-engine.h (status,finished): added
	* eca-control-objects.h (set_default_audio_format_to_selected):
	divided into _to_selected_input() and to_selected_output()
	* eca-chainsetup.h (is_slave_output): renamed to
	is_realtime_target_output
	* eca-session.h (session): added
	* eca-control-base.h (set_buffersize): moved to eca-control-objects.h and renamed to 
	set_chainsetup_buffersize()
	* eca-control-base.h (toggle_raise_priority,toggle_multitrack_mode): removed
		
2001-10-05  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
	
	* eca-chainsetup.h (ok_audio_object): added
	
2001-10-04  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-chainsetup.h (set_buffering_mode, buffering_mode): added
	* eca-session.h (raised_priority, toggle_raised_priority): moved to eca-chainsetup.h
	* eca-chainsetup.h (sched_priority, set_sched_priority): added
	* eca-chainsetup-bufparams.h (all): added