@@ -1,6 +1,6 @@
-#!/bin/bash
-automake
+#!/bin/sh
 aclocal
+automake
 autoconf
 ./configure $@ || exit 1
 make
